Adicion del archivo Css
He agregado el archivo de estilo(style.css) a la carpeta del proyecto

--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Metro CDMX</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <script src ="funcional.js">  </script>    
+<body> 
+    <header>
+            <section class="section_titulo_seleccion_estacion">
+            <h1 class="titulo_seleccion_estacion"> METRO CDMX </h1>
+            </section>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
+   
+
+        <div id="miMenu" class="dropdown">
+            <button class="dropdown-btn">¿En que linea estas?</button>
+            <div class="dropdown-content"></div>
+        </div>
+
+    
+     
+    <script src ="funcional.js">  </script>  
 </body>
 
 </html>
